@@ -1,4 +1,5 @@
 * V1.8.2dev
+  * fixed bug in 'remove_action' in CK kernel
 
 * V1.8.1
   * added continuous integration via Travis (Linux) and AppVeyor (Windows)
